# outlook_autocomplete_reader

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: contact.rs  contact_writer.rs  errors.rs  main.rs  nk2_data_parser.rs  nk2_definitions.rs
