[package]
name = "outlook_autocomplete_reader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytebuffer = "2.0.1"
clap = { version = "4.0.32", features = ["derive"] }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
encoding_rs = "0.8.31"
vcard = "0.4.11"
log = "0.4"
stderrlog = "0.5.4"
csv = "1.1.6"
substring = "1.4.5"
